<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:text="@string/id"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:text="@string/name"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/lapiz"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/update"
        style="@style/botonesColorText"/>

    <ImageButton
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/papelera"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/delete"
        style="@style/botonesColorText"/>



</LinearLayout>
