<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/email"
        android:textSize="18sp" />

    <ImageButton
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/lapiz"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/update" />

    <ImageButton
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/papelera"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/delete" />



</LinearLayout>
